# vmail

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt  vercel.json
vmail/: app.py  config.py
vmail/templates/: verify_email.html
vmail/vmail_router/: __init__.py  db.py  model.py  repo.py  router.py
