[tool.poetry]
name = "vmail"
version = "0.2.0"
description = "Simple email verification service."
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
pydantic-settings = "^2.2.1"
fastapi-mail = "^1.4.1"
aiosqlite = "^0.20.0"
sqlalchemy-libsql = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
